<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeasureActivity">

    <Button
        android:id="@+id/stream_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stream_pause"
        app:layout_constraintBottom_toTopOf="@+id/control_disconnect"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/stream_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        app:layout_constraintLeft_toRightOf="@+id/stream_start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/show_result"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/control_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/show_result"
        app:layout_constraintBottom_toTopOf="@id/value_text"
        app:layout_constraintTop_toBottomOf="@+id/stream_start"/>

    <Button
        android:id="@+id/show_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        app:layout_constraintLeft_toRightOf="@+id/control_disconnect"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/time_text"
        app:layout_constraintTop_toBottomOf="@+id/stream_pause"/>

    <TextView
        android:id="@+id/value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/time_text"
        app:layout_constraintTop_toBottomOf="@+id/control_disconnect"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/value_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_result"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/value_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_text"
        app:layout_constraintBottom_toTopOf="@+id/frequency_chart"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="7.5dp"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/frequency_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_chart"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7.5dp"
        android:layout_marginBottom="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>